--- a/Service/amel/codeAmel/bootstrap.css
+++ b/Service/amel/codeAmel/bootstrap.css
@@ -13,6 +13,7 @@ html {
 }
 body {
    background-color:#bbb;
+    background-image: url(/images/fond_ecran.jpg); 
   color:#048;      
   font-size: 12px;
   line-height: 16px;
